basic css added to meet acceptance criteria, html updated

--- a/index.html
+++ b/index.html
@@ -9,58 +9,67 @@
     </head>
 
     <body>
-        <!-- header banner with name and navbar -->
+        <!-- header banner with picture, name, and navbar -->
         <header>
-            <h1>Curtis Drullinger</h1>
+
+            <img src="./assets/images/CD selfie.jpeg" alt="An image of Curtis Drullinger who is ruggedly handsome"/>
+
+            <h1><p>Curtis</p>
+                <p>Drullinger</p>
+            </h1>
 
             <nav>
                 <ul>
-                    <li><a href=#>About Me</a></li>
-                    <li><a href=#>Projects</a></li>
-                    <li><a href=#>Contact</a></li>
+                    <li><a href=#aboutMe>About Me</a></li>
+                    <li><a href=#appBlock>Projects</a></li>
+                    <li><a href=#contact>Contact</a></li>
                 </ul>
             </nav>
         </header>
 
-        <img src="./assets/images/cat.jpg" alt="An image of Curtis Drullinger who is ruggedly handsome"/>
-
         <!-- "About Me" section with brand statement -->
-        <section>
+        <section id=aboutMe>
             <h2>About Me</h2>
-            <p>Here's some nonsense about me</p>
+            <p>Full-stack web developer eager to apply critical thinking skills acquired during studies applied to a B.S. in Chemistry coupled with newly rooted skills in software engineering.
+                Possessing a certificate in Web Development from Michigan State University Coding Bootcamp, 
+                I am skilled in CSS, JavaScript, HTML, and Python programming.</p>
+                <br>
+            <p>An incredibly quick study with an efficient mindset, my goal is to create and streamline web-based applications while trimming the fat on any currently employed projects.  
+                I have a sharp eye for detail and excel at debugging and trouble-shooting while to produce helpful and constructive criticism of work-in-progress systems.
+                I am excited to apply my knowledge and skills to a new set of projects to increase their overall performance and propel them into their most efficient working states.</p>
         </section>
 
         <!-- project section with images and links to deployed projects-->
-        <section>
-            <a href=#>
+        <section id=appBlock>
+            <a href=# id=firstApp>
                 <figure>
                     <img src="./assets/images/cat.jpg"/>
                     <figcaption>Project #1</figcaption>
                 </figure>
             </a>
 
-            <a href=#>
+            <a href=# id=otherApps>
                 <figure>
                     <img src="./assets/images/cat.jpg"/>
                     <figcaption>Project #2</figcaption>
                 </figure>
             </a>
 
-            <a href=#>
+            <a href=# id=otherApps>
                 <figure>
                     <img src="./assets/images/cat.jpg"/>
                     <figcaption>Project #3</figcaption>
                 </figure>
             </a>
 
-            <a href=#>
+            <a href=# id=otherApps>
                 <figure>
                     <img src="./assets/images/cat.jpg"/>
                     <figcaption>Project #4</figcaption>
                 </figure>
             </a>
 
-            <a href=#>
+            <a href=# id=otherApps>
                 <figure>
                     <img src="./assets/images/cat.jpg"/>
                     <figcaption>Project #5</figcaption>
@@ -68,7 +77,7 @@
             </a>
         </section>
 
-        <footer>
+        <footer id=contact>
             <h3>Contact Me</h3>
             <ul>
                 <li><a href="mailto: ccdrullinger@gmail.com">CCDrullinger@gmail.com</a></li>
