--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Curtis Drullinger</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- <link rel="stylesheet" href="./assets/css/reset.css" /> -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -18,7 +17,7 @@
             <nav class="navbar fixed-top navbar-dark bg-dark">
                 <div class="container-fluid justify-content-end">
                     <a class="navbar-brand" href=#aboutMe>About Me</a>
-                    <a class="navbar-brand" href=#appBlock>Projects</a>
+                    <a class="navbar-brand" href=#appBlock>Applications</a>
                     <a class="navbar-brand" href=#contact>Contact</a>
                 </div>
             </nav>
@@ -79,12 +78,12 @@
                         </div>
                         <div class='col-sm-6'>
                             <div class="card bg-dark text-white">
-                                <img src="./assets/images/sip.png" class="card-img-top" alt="live SIP page featuring bourbon cocktails">
+                                <img src="./assets/images/dayplanner.png" class="card-img-top" alt="live SIP page featuring bourbon cocktails">
                                 <div class="card-body">
-                                    <h4 class="card-title">S.I.P.</h5>
-                                    <p class="card-text">The Spirit Indexing Program can help you find cocktail recipes and inspiration for your available spirits, or find a bartender than can make some for you.</p>
-                                    <a href="#" class="card-link">GitHub Repository</a>
-                                    <a href="#" class="card-link">Live Application</a>
+                                    <h4 class="card-title">Day Planner</h5>
+                                    <p class="card-text">A work-day scheduler with color-coded time blocks for past, present, and future that allow user-fillable notes to be saved with click of a button.</p>
+                                    <a href="https://github.com/Curtisaurus/dayplanner" class="card-link">GitHub Repository</a>
+                                    <a href="https://curtisaurus.github.io/dayplanner/" class="card-link">Live Application</a>
                                 </div>
                             </div>
                         </div>
