--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <a class='navbar-brand contact-link' href="mailto: ccdrullinger@gmail.com">CCDrullinger@gmail.com</a>
                     <a class='navbar-brand contact-link' href="https://github.com/Curtisaurus">Curtisaurus @ GitHub</a>
                     <a class='navbar-brand contact-link' href="https://www.linkedin.com/in/curtis-drullinger/">LinkedIn</a>
-                    <a class='navbar-brand contact-link' href="#">Resumé</a>  
+                    <a class='navbar-brand contact-link' href="https://drive.google.com/file/d/1i1UkMwdRwHm78vD1i7n75Z6cwffoQZwG/view?usp=sharing">Resumé</a>  
                 </div>
             </div>
         </footer>       
